GO-5589: Fix request body format for AddObjectsToList endpoint
