# core/api/docs/openapi.json
@@ -1,6 +1,22 @@
 {
   "components": {
     "schemas": {
+      "apimodel.AddObjectsToListRequest": {
+        "properties": {
+          "objects": {
+            "description": "The list of object IDs to add to the list",
+            "example": [
+              "[\"bafyreie6n5l5nkbjal37su54cha4coy7qzuhrnajluzv5qd5jvtsrxkequ\"]"
+            ],
+            "items": {
+              "type": "string"
+            },
+            "type": "array",
+            "uniqueItems": false
+          }
+        },
+        "type": "object"
+      },
       "apimodel.CheckboxPropertyLinkValue": {
         "properties": {
           "checkbox": {
@@ -2607,10 +2623,7 @@
           "content": {
             "application/json": {
               "schema": {
-                "items": {
-                  "type": "string"
-                },
-                "type": "array"
+                "$ref": "#/components/schemas/apimodel.AddObjectsToListRequest"
               }
             }
           },
